# eiyuden_review

./: .gitignore  data_collection.ipynb  data_preprocessing.ipynb  notebook.ipynb  pyproject.toml
.github/workflows/: steam_reviews.yml
data/: eiyuden_reviews.parquet  game_data_4315.parquet  game_data_4410.parquet  reviews.csv  reviews_2024-10-10.csv  reviews_latest.csv  reviews_old.csv  reviews_old_2024-10-09.csv  reviews_old_2024-10-10.csv
scripts/: SteamReviewCollector.py
tests/: test_steam_review_collector.py
