[tool.poetry]
name = "eiyuden-review"
version = "0.1.0"
description = ""
authors = ["nazhifkojaz <kojazkojaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
seaborn = "^0.13.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
