[tool.poetry]
name = "eiyuden-review"
version = "0.1.0"
description = ""
authors = ["nazhifkojaz <kojazkojaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
seaborn = "^0.13.2"
requests = "^2.32.3"
logging = "^0.4.9.6"
pytest-mock = "^3.14.0"
beautifulsoup4 = "^4.13.4"
lxml = "^5.4.0"
gameinsights = {git = "https://github.com/nazhifkojaz/steam-game-data-collector.git"}
python-dotenv = "^1.1.1"
pyarrow = "^21.0.0"
fastparquet = "^2024.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
